# sophia-strategic-development

./: .ai-assistant-rules  .cline-rules  .codacy.yml  .cursor-rules  .cursor-settings.json  .cursorrules  .deployment-trigger  .env  .env.esc.json  .env.example  .env.github_secrets  .env.lambda-labs  .env.snowflake  .env.template  .envrc  .eslintrc.json  .flake8  .gitignore  .gitmodules  .jscpd.json  .pre-commit-config.yaml  .sophia-env-config  .sqlfluff  .vercel-deploy-trigger  .vercelignore  =2.32.4  =2.5.0  ADVANCED_ARCHITECTURE_IMPLEMENTATION_REPORT_20250629_144242.md  AGENT_DEVELOPMENT.md  AGGRESSIVE_CLEANUP_REPORT.md  AGNO_INTEGRATION_SUCCESS_SUMMARY.md  AIAC_INTEGRATION_ANALYSIS.md  AI_AGENT_LAMBDA_LABS_GUIDE.md  AI_CODE_QUALITY_PERFORMANCE_EXAMINATION_PROMPT.md  AI_CODING_ENHANCEMENT_FINAL_SUMMARY.md  AI_CODING_STRATEGY_IMPLEMENTATION_SUMMARY.md  AI_CODING_STRATEGY_OPTIMIZATION_PLAN.md  AI_DEVELOPMENT_ENVIRONMENT_PROTOCOL.md  AI_ECOSYSTEM_RESEARCH_PROMPT.md  AI_MEMORY_DEPLOYMENT_GUIDE.md  (+1571 more)
.cursor/: mcp_settings.json
.devcontainer/: README.md  devcontainer.json  setup.sh
.githooks/: pre-commit  pre-commit-one-time-check  pre-commit-python-syntax
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.sophia/: comparison_summary.json  config.json  integrations.json
api/: ai_memory_health_routes.py  backend.py  chat.py  deployment_status_routes.py  docs.py  enhanced_unified_chat_routes.py  health.py  index.py  index_optimized.py  lambda_labs_health_routes.py  lambda_labs_health_routes.py.final_backup  legacy_main.py  main.py  orchestrate.py  simple_main.py  simple_main.py.final_backup  unified_chat_routes.py  unified_health_routes.py  unified_routes.py
apps/: .FUTURE_USE_ONLY  README.md
archive/: main_dashboard.py
autonomous-agents/: README.md  __init__.py
backend/: .env.sophia  Dockerfile  Dockerfile.n8n-bridge  __init__.py  __init__.py.final_backup  advanced_ai_gateway.py  advanced_production_main.py  agno_basic_test.py  agno_integration_plan.py  agno_teams.py  agno_teams_simple.py  agno_ux_ui_agent.py  agno_ux_ui_simple.py  ai_gateway_integration.py  app.py  containerized_main.py  containerized_main_fixed.py  enhanced_sota_gateway.py  env.example  fastapi_main.backup.1751323243  fastapi_main.py  main.py  main_simple.py  main_simplified.py  minimal_main.py  production_main.py  requirements-fastapi.txt  requirements.txt  test_ceo_server.py  test_unified_server.py
backup_compose_files/: docker-compose.ai.yml  docker-compose.mcp-gateway.yml  docker-compose.mcp.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.snowflake-admin.yml  docker-compose.sonarqube.yml  docker-compose.yml
backup_dependencies_20250703_030231/: pyproject.toml
backup_deployment_cleanup_20250707_001424/: deploy_production_complete.sh  deploy_production_sophia.sh  docker-compose.mcp.yml  setup_swarm.sh
backup_deployment_fix_20250705_135353/: Dockerfile.minimal  Dockerfile.simple  Dockerfile.uv.production
claude-cli-integration/: README.md  claude  claude-mcp-config.json  claude_cli.py  claude_mcp_config.json  setup_claude_api.py
cleanup_backup_20250706_180710/: deployment_report_1751696458.json  deployment_report_mcp-deploy-1751739158.json  deployment_report_prod_1751697727.json  deployment_report_prod_1751733000.json  deployment_report_prod_1751733668.json  deployment_report_prod_1751733673.json  deployment_report_prod_1751734655.json  deployment_report_uv.json  gh200_validation_results_20250706_174956.json
config/: agno_vsa_configuration.yaml  business_intelligence.json  cline_v3_18_config.json  consolidated_mcp_ports.json  cursor_enhanced_mcp_config.json  cursor_enhanced_mcp_config.json.backup  cursor_enhanced_mcp_config_backup_1751311797.json  cursor_phase1_mcp_config.json  cursor_production_mcp_config.json  enhanced_mcp_ports.json  enhanced_session_cache.env  error_handling_configuration.json  file_migrations.json  infrastructure.py  lambda_labs_mcp_config.json  llm_router.json  lobe_chat_config.json  mcp_master_port_registry.json  mcp_migration_plan.yaml  mcp_monitoring_dashboard.json  mcp_ports.json  mcp_server_inventory.json  mcp_servers_migrated.json  mcp_version_management.yaml  mem0_mcp_integration.json  migration_map.json  monitoring_services_registry.json  nginx_fixed.conf  nginx_ssl.conf  nginx_updated.conf  personalities.json  portkey.json  portkey_config.json  portkey_production.json  production_aligned_mcp_ports.json  production_infrastructure.py  prometheus.yml  pulumi-mcp.json  semantic_layer_config.yaml  service_discovery_registry.json  (+15 more)
configs/: alerts.yml  prometheus.yml
core/: __init__.py  aligned_snowflake_config.py  aligned_snowflake_config.py.final_backup  audit_logger.py  cache_manager.py  constitutional_ai.py  cortex_ai_config.py  cortex_ai_config.py.final_backup  cross_platform_sync_orchestrator.py  cross_platform_sync_orchestrator.py.final_backup  enhanced_memory_architecture.py  enhanced_memory_architecture.py.final_backup  integrated_performance_monitoring.py  integrated_performance_monitoring.py.final_backup  integration_registry.py  optimized_cache.py  performance_monitor.py  protocols.py  self_optimization.py  settings.py  settings.py.final_backup  simple_auth.py  simple_config.py  snowflake_standard_config.py  snowflake_standard_config.py.final_backup  sql_security_validator.py  sql_security_validator.py.final_backup  startup_config.py  startup_config.py.final_backup
dashboard/: sophia_streamlit_app.py
data/: pay_ready_employees_2025_07_15.csv  test_ephemeral_credentials.json
deployment/: DEPRECATED_DOCKER_DEPLOYMENT.md  README.md  docker-compose-ai-core.yml  docker-compose-data-pipeline.yml  docker-compose-development.yml  docker-compose-etcd-discovery.yml  docker-compose-mcp-orchestrator.yml  docker-compose-production.yml  production-config.yaml
deployment_reports/: lambda_labs_2025-07-08T13:49:48.646703.json
docker/: Dockerfile.gh200  Dockerfile.mcp-base  Dockerfile.mcp-server  Dockerfile.optimized
docs/: ADVANCED_DATA_PROCESSING_STRATEGY.md  AGENT_SERVICE_REFERENCE.md  (+300 more)
(+5907 files in other folders)
