[project]
name = "sophia-ai"
version = "2.0.0"
description = "Sophia AI - Enterprise AI Orchestration Platform"
requires-python = ">=3.12"
dependencies = [ "fastapi>=0.115.0", "uvicorn[standard]>=0.24.0", "pydantic>=2.5.0", "sqlalchemy>=2.0.0", "asyncpg>=0.29.0", "redis>=5.0.0", "openai>=1.0.0", "anthropic>=0.25.0", "pinecone-client>=3.0.0", "snowflake-connector-python>=3.7.0", "pulumi>=3.100.0", "kubernetes>=28.0.0", "prometheus-client>=0.19.0", "structlog>=23.2.0", "typer>=0.9.0", "httpx>=0.26.0", "pydantic-settings>=2.1.0",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [ "pytest>=7.4.0", "pytest-asyncio>=0.23.0", "black>=23.0.0", "ruff>=0.1.0", "mypy>=1.8.0", "coverage>=7.4.0", "pre-commit>=3.6.0",]

[tool.black]
line-length = 88
target-version = [ "py312",]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [ "E", "F", "W", "I", "N", "B", "C4", "UP",]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
